--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.light-mode{
+  --background-color: white;
+  --color: black;
+}
+.dark-mode{
+  --background-color: black;
+  --color: white;
+}
+
+.body{
+  background-color: var(--background-color);
+  color: var(--color);
+}
