--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,10 @@
   text-align: center;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -35,4 +35,22 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+
+/*  */
+.main-container{
+  background-color: whitesmoke;
+  box-sizing: border-box;
+  width: 100vw;
+  height: 100vh;
+}
+.bottom-container{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+.light-mode-main-page{
+  background-color: whitesmoke;
 }
