--- a/src/components/Dashboard/index.css
+++ b/src/components/Dashboard/index.css
@@ -1,3 +1,5 @@
+
+/* sidebar container styles */
 .side-bar-container{
     margin-top: 8px;
     /* margin-right: 8px; */
@@ -15,7 +17,7 @@
     background-color: white;
     text-align: left;
 }
-
+/* dashboard tabs active status */
 .active{
     background-color: rgb(212, 235, 250);
     border-right: 4px solid rgb(40, 176, 230);
@@ -30,7 +32,7 @@
     cursor: pointer;
 }
 
-
+/* darkmode and lightmode customiztions */
 .dark-mode{
     background-color: black;
     color: white;
